# ed-analytics-exercise-ct

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: app.py  main.py
app/models/: github.py
app/rest/: __init__.py  github.py
